# bevy_consumable_event

./: Cargo.toml  README.md
src/: app.rs  lib.rs
