[package]
name = "bevy_consumable_event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
readme = "README.md"

[dependencies]
bevy_app = { version = "0.12.1", optional = true }
bevy_ecs = { version = "0.12.1", default-features = false }

[dev-dependencies]
bevy = "0.12.1"

[features]
default = ["bevy_app"]
