[package]
edition = "2021"
name = "bevy_consumable_event"
version = "0.5.0-rc.1"

description = "A crate to add events to Bevy that can be consumed."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/bevy_consumable_event"

categories = ["game-development"]
keywords = ["bevy", "consume", "event"]

[dependencies]
bevy_app = { version = "0.15.0-rc.1", optional = true }
bevy_ecs = { version = "0.15.0-rc.1", default-features = false }

[dev-dependencies]
bevy = { version = "0.15.0-rc.1", default-features = false }

[features]
default = ["bevy_app"]
